fix alignment of view archived sprints checkbox

--- a/src/components/organisms/panels/sprintPlanning/SprintPlanningPanel.module.css
+++ b/src/components/organisms/panels/sprintPlanning/SprintPlanningPanel.module.css
@@ -40,5 +40,5 @@
 
 .includeArchivedCheckbox {
     display: flex;
-    alignitems: center;
+    align-items: center;
 }
